--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       # Use mvn clean and package as the standard maven build phase
       - run: 
           name: BD
-          command: bash <(curl -s https://detect.synopsys.com/detect7.sh) --blackduck.url=https://testing.blackduck.synopsys.com --blackduck.username=sysadmin --blackduck.password=e5@w3^C1?m2P?W
+          command: bash <(curl -s https://detect.synopsys.com/detect7.sh) --blackduck.url=https://testing.blackduck.synopsys.com --blackduck.api.token=YmMyZDY2ZDYtMDAyOS00M2Y1LTkyYWItNjJiOTg4NDAxNmNmOjMyODJkYTkyLWJlMDgtNDk3Ny1hZjg5LWMyNmRjNDE3ZWNjZA== --detect.trust.cert=true
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
